--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <title>My First HTML Document</title>
 </head>
 <body>
-    <h2>Embedding Images in HTML</h2>
-    <img src="leopard.jpg">
+    <h2>Hello World!</h2>
 </body>
 </html>
